tests/functional2/lang/parser-eof/parse-fail-string.err.exp
error: syntax error, unexpected end of file, expecting '"'
       at /pwd/in.nix:3:6:
            2| # Note that this file must not end with a newline.
            3| a 1"$
             |      ^
